--- a/src/app/core/components/layouts/header/header/header.component.html
+++ b/src/app/core/components/layouts/header/header/header.component.html
@@ -77,6 +77,27 @@
 
   </section>
 
+<!-- About Section -->
+<section id="about-section">
+  <!-- about left  -->
+  <div class="about-left">
+      <img src="https://firebasestorage.googleapis.com/v0/b/angular-c4826.appspot.com/o/jordan-map.webp?alt=media&token=805936a3-a3a1-4d4d-8334-b13fb5a009be" width="300px" style="margin-bottom:20px"/>
+  </div>
+
+  <!-- about right  -->
+  <div class="about-right">
+
+      <h1>About Us</h1>
+      <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Debitis fugiat a dolorem at similique maxime dolorum dolore
+          enim dicta voluptatibus, illum recusandae, vel optio tempore
+          ipsum incidunt eum. Aspernatur, repellendus.
+      </p>
+
+  </div>
+</section>
+
 
 
 
