--- a/src/app/pages/home/footer/footer.component.html
+++ b/src/app/pages/home/footer/footer.component.html
@@ -37,15 +37,16 @@
 
   <div class="col">
    Shere With Us :
-    <share-buttons
+   <div class="icons"> <share-buttons
 [include]="['facebook','linkedin', 'twitter']"
 [showIcon]="true"
 [showText]="false"
 url="https://rodrigo.kamada.com.br/"
  description="Angular Share Buttons"
  twitterAccount="rodrigokamada"
+
   >
-</share-buttons>
+</share-buttons></div>
   </div>
 
 
