--- a/src/app/pages/home/footer/footer.component.css
+++ b/src/app/pages/home/footer/footer.component.css
@@ -28,6 +28,9 @@ padding: 20px;
 padding: 20px;
 text-align: center;
 
+
+
+
 }
 @media (max-width: 700px)  {
   .row{width: 86%;
@@ -37,3 +40,7 @@ margin-left: 12px;
 }
 }
 
+.sb-default.sb-group {
+  display: flex !important;
+  flex-wrap:nowrap !important;
+}
