--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,6 +1,6 @@
 
 <app-header> </app-header>
 <div id="sectors"> <app-list-sectors></app-list-sectors></div>
-
 <app-preview-startup></app-preview-startup>
+<app-slider></app-slider>
 <app-footer></app-footer>
