--- a/src/app/pages/home/list-sectors/list-sectors.component.css
+++ b/src/app/pages/home/list-sectors/list-sectors.component.css
@@ -3,7 +3,7 @@ h2{
   justify-content: center;
   padding: 40px  0 0 0;
   font-size: 1.5rem;
-  color: rgb(54, 49, 82);
+  color: rgb(124, 27, 72);
 }
 .container{
 	display: flex;
@@ -18,13 +18,13 @@ padding: 20px;
 .card{
   width: 300px;
   height: 74px;
-  border-radius: 24px;}
+  border-radius: 24px;
+}
 
 img{
   width: 50px;
   height: 50px;
-  padding-top: 8px;
-
+margin:10px;
 }
 
 .content{
