--- a/src/app/pages/home/list-sectors/list-sectors.component.html
+++ b/src/app/pages/home/list-sectors/list-sectors.component.html
@@ -1,7 +1,7 @@
 <section >
   <h2>Explore Main Sectors</h2>
   <div class="container">
-    <div class="card" *ngFor="let item of dataArray">
+    <div class="card" *ngFor="let item of dataArray" [style.border-color]="item.color">
       <div class="content">
         <div class="imgBx">
           <img [src]="item.logo" />
