--- a/src/app/pages/home/preview-startup/preview-startup.component.css
+++ b/src/app/pages/home/preview-startup/preview-startup.component.css
@@ -3,7 +3,7 @@ h2{
   justify-content: center;
   padding: 40px  0 0 0;
   font-size: 1.4rem;
-  color: rgb(54, 49, 82);
+  color: rgb(124, 27, 72);
 text-align: center;
 
 
@@ -58,7 +58,7 @@ section::after {
 .container .card {
 	position: relative;
 	width: 200px;
-	height: 200px;
+	height: 250px;
 	background: white;
 	margin: 20px;
 	box-shadow: 0 15px 15px rgba(0, 0, 0, 0.5);
@@ -140,4 +140,12 @@ button{
 button:hover{
 background-color: rgb(124, 27, 72);
   color: white;
+}
+span  {
+  font-size: 10px;
+  color: darkgrey;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
 }
