--- a/src/app/pages/home/preview-startup/preview-startup.component.html
+++ b/src/app/pages/home/preview-startup/preview-startup.component.html
@@ -2,7 +2,15 @@
 <div class="start">
   <h2>Discover Jordan's<br> cutting-edge<br> and inspiring startups.</h2>
   <section>
+    <mat-form-field appearance="fill">
+      <mat-select  (selectionChange)="filterSector($event)">
+        <mat-option value="all"> All
+        </mat-option>
+        <mat-option   *ngFor="let item of listSectors" [value]="item.name">{{item.name}} </mat-option>
+      </mat-select>
+    </mat-form-field>
     <div class="container">
+
       <div class="card" *ngFor="let item of obs| async">
         <div class="content">
           <div class="imgBx">
@@ -10,7 +18,8 @@
           </div>
           <div class="contentBx">
             <h4>{{ item.name }}</h4>
-
+            <span  *ngFor=" let item of item.sectors" >  {{item.name}}  </span>
+            <!--<span >{{item.sectors.}} .</span>-->
         <button    (click)="onClicked(item)" >More Read!</button>
           </div>
         </div>
