--- a/src/app/pages/home/details-startup/details-startup.component.css
+++ b/src/app/pages/home/details-startup/details-startup.component.css
@@ -1,4 +1,3 @@
-
 .cover{
   background-size: cover;
   width: 100%;
@@ -52,26 +51,26 @@ h1 a{
   left: 6%;
 }
 
-
-
-
   .content{
     border:1px solid rgba(218, 212, 212, 0.788) ;
     padding: 80px;
     height: 100%;
-
+    background:rgb(253, 250, 250);
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     }
+
   p{
     font-size: 24px;
     padding-top: 26px;
     color: blueviolet;
     font-weight: 540;
   }
+
   span{
   color: rgb(150, 147, 147);
     gap: 10px;
   }
+
   @media only screen and (max-width: 600px) {
     .title {
       font-size: 1.2rem;
@@ -80,6 +79,7 @@ h1 a{
 
 
     }
+
     h1 a{
       font-size: 12px;
       position: absolute;
@@ -166,7 +166,15 @@ h1 a{
       -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em;
     }
   }
+  span a:hover{
+color: rgba(117, 112, 112, 0.872);
 
+  }
 
+span a{
+color: #000;
+text-decoration: none;
+font-weight: 600;
 
+}
 
