--- a/src/app/pages/home/details-startup/details-startup.component.html
+++ b/src/app/pages/home/details-startup/details-startup.component.html
@@ -1,3 +1,7 @@
+
+
+
+
 <div    class="loader"
 role="status" *ngIf= "loader"  >
   </div>
@@ -19,6 +23,7 @@ role="status" *ngIf= "loader"  >
 <p>  Sectors: </p><span *ngFor="let item of startup.sectors"  >{{item.name}} .</span>
 <p> Year Of Establish:</p><span>{{startup.yearOfEstablish}} </span>
 <p> Number Of Employees:</p><span>{{startup.numberOfEmployees}} </span>
-        <p>Website:</p>             <span>{{startup.websiteUrl}} </span>
+        <p>Website:</p> <span> <a href="{{startup.websiteUrl}}">Website</a> </span>
 </div> </div>
+
 
