--- a/src/app/pages/home/list-sectors/list-sectors.component.css
+++ b/src/app/pages/home/list-sectors/list-sectors.component.css
@@ -13,6 +13,7 @@ flex-direction: row;
 gap: 20px;
 flex-wrap: wrap;
 padding: 20px;
+padding-bottom: 40px;
 }
 
 .card{
@@ -33,8 +34,8 @@ margin:10px;
 }
 .contentBx{
 justify-content: center;
-padding: 18px  18px 0 10px  ;
+padding: 18px  18px 0 6px  ;
 }
 section{
 
-    background:rgb(253, 250, 250);}
+    background:rgb(230, 196, 212);}
