--- a/src/app/pages/home/preview-startup/preview-startup.component.css
+++ b/src/app/pages/home/preview-startup/preview-startup.component.css
@@ -59,7 +59,7 @@ section::after {
 	position: relative;
 	width: 200px;
 	height: 250px;
-	background: white;
+  background:rgb(253, 250, 250);
 	margin: 20px;
 	box-shadow: 0 15px 15px rgba(0, 0, 0, 0.5);
 	border-radius: 15px;
