--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
-
-
-
 <app-side-nav *ngIf="isLoggedIn$ | async ; else notAuth">
 </app-side-nav>
 
 <div class="loader"
-role="status" *ngIf="loader"
- >
+role="status" *ngIf="this.loader.getLoading()">
   <span class="visually-hidden">Loading...</span> </div>
 <ng-template #notAuth    >
-  <div *ngIf= "!loader">   <router-outlet></router-outlet> </div>
+  <div *ngIf= "!(this.loader.getLoading()) ">   <router-outlet></router-outlet> </div>
 </ng-template>
