--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 </app-side-nav>
 
 <div class="loader"
-role="status" *ngIf="this.loader.getLoading()">
+role="status" *ngIf="this.loader.getload()">
   <span class="visually-hidden">Loading...</span> </div>
 <ng-template #notAuth    >
-  <div *ngIf= "!(this.loader.getLoading()) ">   <router-outlet></router-outlet> </div>
+  <div *ngIf="!(this.loader.getload())">   <router-outlet></router-outlet> </div>
 </ng-template>
