--- a/src/app/pages/startups/startups/startups.component.html
+++ b/src/app/pages/startups/startups/startups.component.html
@@ -7,7 +7,7 @@ role="status" *ngIf="loader"  >
 <div class="header">
     <h1>Startups Jordan</h1>
   </div>
-  <label style="font-size: 16px;font-weight:500;"> Search Of Sectors:</label>
+  <label style="font-size: 16px;font-weight:500;"> Filter by sectors:</label>
 
    <mat-form-field appearance="fill">
     <mat-select  (selectionChange)="filterSector($event)">
