--- a/src/app/pages/home/list-sectors/list-sectors.component.css
+++ b/src/app/pages/home/list-sectors/list-sectors.component.css
@@ -17,17 +17,18 @@ padding-bottom: 40px;
 }
 
 .card{
-  width: 300px;
-  height: 74px;
+  width: 320px;
+  height: 70px;
   border-radius: 24px;
 }
 
 img{
   width: 50px;
   height: 50px;
-margin-top:10px;
+margin:10px;
+opacity: .2;
 }
-
+img:hover {opacity: 1;}
 .content{
   display: flex;
   flex-direction: row;
