--- a/src/app/core/components/layouts/header/header/header.component.css
+++ b/src/app/core/components/layouts/header/header/header.component.css
@@ -1,7 +1,7 @@
 .header{
   min-height: 100vh;
   width: 100%;
-  background-image: Url(' https://firebasestorage.googleapis.com/v0/b/angular-c4826.appspot.com/o/M%C3%BCnster%2C_LVM%2C_B%C3%BCrogeb%C3%A4ude_--_2013_--_5149-51.jpg?alt=media&token=1f5d1e54-39c8-43cf-9c30-0961bfe64a8e');
+  background-image: Url(' https://firebasestorage.googleapis.com/v0/b/angular-c4826.appspot.com/o/cover%2FUntitled%20design%20(1).png?alt=media&token=41869f7e-87c1-43e3-9477-05f61940afc4');
   background-size: cover;
   position: relative;
   background-attachment: fixed;
@@ -35,7 +35,7 @@
     transition:.3s;
     padding-top: 30px;
     padding-bottom: 20px;
-    padding: 0 54px;
+    padding: 0 20px;
     height: 70px;
   }
   .right{
@@ -105,9 +105,9 @@ flex-wrap: wrap;
     font-size: 32px;
     color: rgb(124, 27, 72);
 
-    margin: 10px;
+
     padding-bottom: 20px;
-    font-weight: 800;
+    font-weight: 740;
 
   }
   .text-box p{
@@ -183,7 +183,7 @@ max-width:21rem
     }
     .nav-links ul li a{
       right:-200px;
-      color: rgb(14, 9, 41);
+      color: rgb(124, 27, 72);
       text-shadow: 2px 2px 4px #a3a3a3;
     }
 
@@ -300,7 +300,7 @@ bottom: 88px;
   border:hidden;
   margin: 20px;
   border-radius: .2rem;
-  background-color: rgb(255, 255, 255);
+  background-color:rgb(253, 250, 250);
   border-radius: 10px;
 
   }
@@ -325,11 +325,11 @@ bottom: 88px;
 
 .card i{
 
-  color:rgb(255, 255, 255);
+  color:#ffffff;
 
   border-radius: 50%;
-  width:35px;
-  height: 35px;
+  width:34px;
+  height: 34px;
   display: flex;
   align-items: center;
   justify-content: center;
