--- a/src/app/pages/home/list-sectors/list-sectors.component.css
+++ b/src/app/pages/home/list-sectors/list-sectors.component.css
@@ -26,9 +26,10 @@ img{
   width: 50px;
   height: 50px;
 margin:10px;
-opacity: .2;
+
+/*opacity: .2;*/
 }
-img:hover {opacity: 1;}
+/*img:hover {opacity: 1;}*/
 .content{
   display: flex;
   flex-direction: row;
