--- a/src/app/pages/startups/add-startup/add-startup.component.html
+++ b/src/app/pages/startups/add-startup/add-startup.component.html
@@ -67,6 +67,10 @@ role="status" *ngIf= "loader"  >
     <mat-error  *ngIf=" formGroup.get('emailAddress')?.invalid">{{getErrorMessage(formGroup.get('emailAddress'))}} </mat-error>
   </mat-form-field>
 
+  <mat-form-field appearance="fill">
+    <mat-label>Textarea</mat-label>
+    <textarea matInput placeholder="Describtion"  formControlName="describtion"></textarea>
+  </mat-form-field>
   <button mat-flat-button     (click)="onAddClicked()">Add Startup</button>
   </form>
 </div>
