--- a/src/app/pages/home/details-startup/details-startup.component.html
+++ b/src/app/pages/home/details-startup/details-startup.component.html
@@ -17,16 +17,14 @@ role="status" *ngIf= "loader"  >
     <div class="head">
  <span>{{startup.name}} </span>
 <img  class="logo" [src]="startup.logo" alt="loading... "></div>
-
+<P>Describtion:</P> <span>{{startup.describtion}}</span>
 <p>Email Address:</p><span>{{startup.emailAddress}}</span>
 <p> City: </p><span>{{startup.city}} .</span>
 <p>  Sectors: </p><span *ngFor="let item of startup.sectors"  >{{item.name}} .</span>
 <p> Year Of Establish:</p><span>{{startup.yearOfEstablish}} </span>
 <p> Number Of Employees:</p><span>{{startup.numberOfEmployees}} </span>
-<p>Website:</p> <span> <a href="{{startup.websiteUrl}}">Website</a> </span>
-</div>
-<app-footer></app-footer>
- </div>
+ <p>Website:</p> <span> <a href="{{startup.websiteUrl}}">Website</a> </span>
+</div> <app-footer></app-footer></div>
 
 
 
