--- a/src/app/pages/home/list-sectors/list-sectors.component.html
+++ b/src/app/pages/home/list-sectors/list-sectors.component.html
@@ -1,4 +1,4 @@
-<section >
+<section  [attr.id]="'sectors'" >
   <h2>Explore Main Sectors</h2>
   <div class="container">
     <div class="card" *ngFor="let item of dataArray" [style.border-color]="item.color">
