--- a/src/app/core/components/layouts/header/header/header.component.css
+++ b/src/app/core/components/layouts/header/header/header.component.css
@@ -1,11 +1,25 @@
 .header{
   min-height: 100vh;
   width: 100%;
-  background-image: Url(' https://firebasestorage.googleapis.com/v0/b/angular-c4826.appspot.com/o/cover%2FUntitled%20design%20(1).png?alt=media&token=41869f7e-87c1-43e3-9477-05f61940afc4');
+ background-image: Url(' https://firebasestorage.googleapis.com/v0/b/angular-c4826.appspot.com/o/cover%2FUntitled%20design%20(1).png?alt=media&token=41869f7e-87c1-43e3-9477-05f61940afc4');
   background-size: cover;
   position: relative;
   background-attachment: fixed;
   }
+
+  .header::after{
+    position: absolute;
+        content: '';
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        /*background: rgb(3, 3, 3);*/
+        overflow: hidden;
+        background: linear-gradient(180deg, rgba(58, 9, 54, 0) 0%, rgba(0, 0, 0, 0.7) 88%, rgb(69 17 46)  100%);}
+
+/*background: linear-gradient(180deg, rgba(5, 5, 5, 0) 0%, rgba(7, 7, 7, 0.7) 71%, rgb(49, 11, 39) 100%);*/
+
 
 
   .header_fixed{
@@ -18,7 +32,6 @@
       padding-top: 30px;
       padding-bottom: 20px;
       box-shadow: 2px 4px 10px rgba(98, 98, 98, 0.3);
-
   }
 
 
@@ -113,7 +126,8 @@ flex-wrap: wrap;
   .text-box p{
     margin:10px 0 60px ;
     font-size: 18px;
-    color: rgb(245, 181, 209);
+    color: rgb(255, 233, 243);
+
     padding-left: 0;
 align-content: center;
 gap: 20px;
@@ -154,7 +168,7 @@ max-width:21rem
 
 
   }
-  @media(max-width :768px){
+  @media(max-width :830px){
     #about-section{  padding: 0 !important;}
     nav{
       height: fit;
@@ -167,9 +181,9 @@ max-width:21rem
     .auth-btns{
       display: none !important;
     }
-    .text-box h1{  font-size: 18px;     padding-bottom: 10px;}
+    .text-box h1{  font-size: 24px;     padding-bottom: 10px;}
 
-    .text-box p{    font-size: 12px;
+    .text-box p{
       width: 84%;
             }
     .nav-links ul li{
@@ -280,107 +294,3 @@ width: 68%;
     text-shadow: 2px 2px 4px #f7caeb;
   }
 
-  .container{
-    justify-content: center;
-    align-items: center;
-  display: flex;
-  flex-direction: row;
-  padding: 10px;
-  flex-wrap: wrap;
-position: relative;
-bottom: 88px;
-  }
-
-
-  .card{
-    box-shadow: rgba(116, 114, 114, 0.15) 0px 5px 15px 0px;
-    width: 300px;
-    height: 160px;
-  cursor: pointer;
-  border:hidden;
-  margin: 20px;
-  border-radius: .2rem;
-  background-color:rgb(253, 250, 250);
-  border-radius: 10px;
-
-  }
-  .card:hover{
-
-    transform: translateY(-0.5%);
-  box-shadow: 0rem  .5rem 1rem 0 rgb(166, 166, 202);
-
-  }
-
-  .card-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-    font-size: 15px;
-    padding: 1rem .8rem;
-    float: right;
-  font-weight: 600;
-  flex-direction: column;
-  text-align: center;
-  }
-
-.card i{
-
-  color:#ffffff;
-
-  border-radius: 50%;
-  width:34px;
-  height: 34px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-align-self: center;
-margin-top: 12px;
-
-}
-.text-service{
-
-  font-size: 14px;
-  font-weight: 400;
-}
-.card-container h3 {
-font-size: 18px;
-font-weight: 520;
-}
-.card-container div{
-  font-size: 14px;
-  font-weight: 400;
-}
-
-#about-section{
-  width: 100%;
-  height: auto;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 0 10%;
-  flex-wrap: wrap;
-}
-
-.about-right{
-  width: 50%;
-}
-
-.about-right ul li{
-  display: flex;
-  align-items: center;
-}
-
-.about-right h1{
-  color: rgb(124, 27, 72);
-
-  margin-bottom: 14px;
-
-  font-weight: 500;
-}
-
-.about-right p{
-  color: #444;
-  line-height: 22px;
-  font-size: 12px;
-
-}
