--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -8,14 +8,17 @@
 
 <div class="input-field">
   <i class="fas fa-envelope" ></i>
-  <input type="email" placeholder="Email"  formControlName="email"  [ngClass]="(email.touched && email.invalid )?'error-input':''">
+  <input type="email" placeholder="Email"  formControlName="email"
+   [ngClass]="(email.touched && email.invalid )?'error-input':''"
+>
 </div>
 <div class="must"  *ngIf="email.touched &&email.invalid">{{getEmailErrorMessage()}}</div>
 
 
 
 
-<div class="input-field" [ngClass]="(password.touched && password.invalid )?'error-input':''">
+<div class="input-field" [ngClass]="(password.touched && password.invalid )?'error-input':''"
+>
   <i class="fas fa-lock "></i>
 
   <input [type]=" changetype?'password':'text'" placeholder="Password"  formControlName="password" >
@@ -25,10 +28,10 @@
 </div>
 <div class="must" *ngIf="password.touched && password.invalid">{{getPasswordErrorMessage()}}</div>
 
-
+<p> Create New Account :<a [routerLink]="['/auth/signup']">create account</a></p>
 <input type="submit" value="login" class="btn" (click)="onloginClicked()" >
 
-<p> Create New Account :<a [routerLink]="['/auth/signup']">create account</a></p>
+
 </form>
 </div> </div>
   </section>
