--- a/src/app/pages/home/footer/footer.component.css
+++ b/src/app/pages/home/footer/footer.component.css
@@ -1,15 +1,3 @@
-/*.p-4{
-  background-color: rgb(88, 49, 124) !important;
-padding: 0.4rem 1rem !important;
-border: none !important;
-}
-.d-flex{
-
-  padding:1rem 0!important;
-}
-*/
-
-
 footer{
   background-color: rgb(124, 27, 72);
   color: #fff;
@@ -19,7 +7,7 @@ footer{
 display: flex;
 justify-content: space-between;
 flex-wrap: wrap;
-
+margin: 0;
 padding: 20px;
 
 
@@ -33,14 +21,14 @@ text-align: center;
 
 }
 @media (max-width: 700px)  {
-  .row{width: 86%;
-margin: 0;
-margin-left: 12px;
-    padding-right: 0;
+  .row{
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
 }
 }
 
-.sb-default.sb-group {
-  display: flex !important;
-  flex-wrap:nowrap !important;
-}
+
+
+
