--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,4 +1,5 @@
 <app-header> </app-header>
+<app-main></app-main>
  <app-list-sectors></app-list-sectors>
 <app-preview-startup></app-preview-startup>
 <app-slider></app-slider>
