--- a/src/app/pages/home/preview-startup/preview-startup.component.html
+++ b/src/app/pages/home/preview-startup/preview-startup.component.html
@@ -1,7 +1,7 @@
 
 <div class="start">
   <h2>Discover Jordan's<br> cutting-edge<br> and inspiring startups.</h2>
-  <section>
+  <section [attr.id]="'startups'">
     <!--<mat-form-field appearance="fill">
       <mat-select  (selectionChange)="filterSector($event)">
         <mat-option value="all"> All
@@ -19,7 +19,8 @@
           </div>
           <div class="contentBx">
             <h4>{{ item.name }}</h4>
-            <!--<span >{{item.sectors.}} .</span>-->
+           <!-- <span >{{item.sectors}} </span>-->
+            <span  *ngFor=" let item of item.sectors" >  {{item.name}}  </span>
         <button    (click)="onClicked(item)" >More Read!</button>
           </div>
         </div>
