--- a/src/app/pages/home/footer/footer.component.html
+++ b/src/app/pages/home/footer/footer.component.html
@@ -41,7 +41,7 @@
 [include]="['facebook','linkedin', 'twitter']"
 [showIcon]="true"
 [showText]="false"
-url="https://rodrigo.kamada.com.br/"
+url="https://angular-c4826.web.app/"
  description="Angular Share Buttons"
  twitterAccount="rodrigokamada"
 
