--- a/src/app/pages/startups/add-startup/add-startup.component.html
+++ b/src/app/pages/startups/add-startup/add-startup.component.html
@@ -68,7 +68,7 @@ role="status" *ngIf= "loader"  >
   </mat-form-field>
 
   <mat-form-field appearance="fill">
-    <mat-label>Textarea</mat-label>
+    <mat-label>Describtion</mat-label>
     <textarea matInput placeholder="Describtion"  formControlName="describtion"></textarea>
   </mat-form-field>
   <button mat-flat-button     (click)="onAddClicked()">Add Startup</button>
