--- a/src/app/pages/startups/request-startup/request-startup.component.html
+++ b/src/app/pages/startups/request-startup/request-startup.component.html
@@ -66,7 +66,7 @@ role="status" *ngIf= "loader"  >
     <mat-error  *ngIf=" formGroup.get('emailAddress')?.invalid">{{getErrorMessage(formGroup.get('emailAddress'))}} </mat-error>
   </mat-form-field>
   <mat-form-field appearance="fill">
-    <mat-label>Textarea</mat-label>
+    <mat-label>Describtion</mat-label>
     <textarea matInput placeholder="Describtion"  formControlName="describtion"></textarea>
   </mat-form-field>
 <button mat-flat-button  color="primary"    (click)="onAddClicked()">Add Startup</button>
