--- a/src/app/core/components/layouts/header/header/header.component.css
+++ b/src/app/core/components/layouts/header/header/header.component.css
@@ -8,7 +8,7 @@
 
   }
 
-  .header::after {
+  /*.header::after {
     position: absolute;
         content: '';
         left: 0;
@@ -16,7 +16,7 @@
         width: 100%;
         height: 100%;
 
-        /*background: rgb(3, 3, 3);*/
+        /*background: rgb(3, 3, 3);
         overflow: hidden;
         background: linear-gradient(180deg, rgba(58, 9, 54, 0) 0%, rgba(0, 0, 0, 0.7) 88%, rgb(69 17 46)  100%);}
 
