--- a/src/app/pages/auth/signup/signup.component.html
+++ b/src/app/pages/auth/signup/signup.component.html
@@ -42,6 +42,8 @@
 
 
 <input type="submit" value="Sign up" class="btn" (click)="onSignupClicked()" >
+<a  style="font: size 4px; font-weight:800; " (click)="onClicked()" >Back</a>
 </form>
-</div></div>
+</div>
+</div>
 </section>
