--- a/src/app/pages/home/footer/footer.component.html
+++ b/src/app/pages/home/footer/footer.component.html
@@ -42,7 +42,7 @@
 [showIcon]="true"
 [showText]="false"
 url="https://angular-c4826.web.app/"
- description="Angular Share Buttons"
+ description=" Startups "
  twitterAccount="rodrigokamada"
 
   >
