--- a/src/app/pages/home/details-startup/details-startup.component.css
+++ b/src/app/pages/home/details-startup/details-startup.component.css
@@ -62,7 +62,7 @@ h1 a{
   p{
     font-size: 24px;
     padding-top: 26px;
-    color: blueviolet;
+    color: rgb(145, 10, 73);
     font-weight: 540;
   }
 
